Minor editing * Use of generic Jquery(jq) * variable correction * organize imports

--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -56,7 +56,7 @@
 					if(month.length == 1) {
 						month = '0'+month;
 						var cohort = month +"-"+ (birthdate.getUTCFullYear()+1);
-						$j('#calculated-cohort').html(cohort);
+						jq('#calculated-cohort').html(cohort);
 					}
 			}
 			function tbContactInHouseHold(){
