--- a/omod/src/main/webapp/resources/htmlforms/tb/tbDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbDiscontinuation.html
@@ -17,69 +17,52 @@
 		table.tb {
 			background-color: #FFFFCC;
 			}
-		table.tb1{
-			border: 1px solid black;
-			vertical-align: baseline;
-			padding: 0;
-			text-align: left;
-		}
 	</style>
 
 	<script type="text/javascript">
-		jq(document).ready(function() {
-			var tdFortreatmentOutCome_ttle =  document.getElementById("id_treatment_outcome_date_ttle");
-			var tdFortreatmentOutCome_value =  document.getElementById("id_treatment_outcome_date_value");
-			var transferout = document.getElementById("transferout");
-			// when it loading for the first time
-			if (getValue('treatment_outcome.value') == "") {
-					jq('#id_treatment_outcome_date_value :input').prop('disabled', true);
-					jq('#transferout :input').prop('disabled', true);
-				}
-				else {
-					jq('#id_treatment_outcome_date_value :input').prop('disabled', false);
-				}
-				if (getValue('treatment_outcome.value') == 159492){
-					jq('#transferout :input').prop('disabled', false);
-				}
-				else{
-					jq('#transferout :input').prop('disabled', true);
-				}
-			//control the date on selection of options
-			jqj("#treatment_outcome select").change(function() {
-				if (getValue('treatment_outcome.value') == "") {
-					jq('#transferout :input').prop('disabled', true);
-					jq('#id_treatment_outcome_date_value :input').prop('disabled', true);
-				}
-				else {
-					jq('#id_treatment_outcome_date_value :input').prop('disabled', false);
-				}
-				if (getValue('treatment_outcome.value') == 159492){
-					jq('#transferout :input').prop('disabled', false);
-				}
-				else{
-					jq('#transferout :input').prop('disabled', true);
-				}
-			});
 
-			beforeSubmit.push(function() {
+			function treatmentoutcomes(){
 				if (getValue('treatment_outcome.value') == "") {
-					getField('treatment_outcome.error').html('Missing treatment outcome').show();
-					return false;
+					jq('#transferout :input').prop('disabled', true);
+					jq('#id_treatment_outcome_date_value :input').prop('disabled', true);
+					jq('#notes :input').prop('disabled', true);
 				}
-				if ((getValue('treatmentoutcomedate.value') == "")){
-					getField('treatmentoutcomedate.error').html('Missing treatment outcome date').show();
-					return false;
-					
+				else {
+					jq('#id_treatment_outcome_date_value :input').prop('disabled', false);
+					jq('#notes :input').prop('disabled', false);
 				}
 				if (getValue('treatment_outcome.value') == 159492){
-					if(getValue('transferredoutto.value') == ""){
-						getField('transferredoutto.error').html('Missing transfer to facility').show();
+					jq('#transferout :input').prop('disabled', false);
+				}
+				else{
+					jq('#transferout :input').prop('disabled', true);
+					jq('#notes :input').prop('disabled', false);
+				}
+			}
+
+			jq(function() {
+				treatmentoutcomes();
+				jq('#treatment_outcome').click(treatmentoutcomes);
+
+				beforeSubmit.push(function() {
+					if (getValue('treatment_outcome.value') == "") {
+						getField('treatment_outcome.error').html('Missing treatment outcome').show();
 						return false;
 					}
-				}
-				return true;
+					if ((getValue('treatmentoutcomedate.value') == "")){
+						getField('treatmentoutcomedate.error').html('Missing treatment outcome date').show();
+						return false;
+
+					}
+					if (getValue('treatment_outcome.value') == 159492){
+						if(getValue('transferredoutto.value') == ""){
+							getField('transferredoutto.error').html('Missing transfer to facility').show();
+							return false;
+						}
+					}
+					return true;
+				});
 			});
-		});
 	</script>
 
 	<!-- Should always be the current user -->
@@ -98,42 +81,46 @@
 
 	<div class="ke-form-content">
 		<fieldset>
-			<legend>Treatment Outcomes</legend>
-
-			<table class="baseline-aligned" width="auto" border="0" cellspacing="10">
-				<tr>
-					<td>Treatment Outcome</td>
-					<td><obs conceptId="159786AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  style="dropdown" id="treatment_outcome"  answerConceptIds="159791AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160035AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160034AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160031AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Cured(Smear. Negative),Treatment Completed(no smear result),Failure(Smear. Positive),Dead,Defaulted,Transferred Out"/></td>
-
-					<td id ="id_treatment_outcome_date_ttle">Treatment Outcome date</td>
-					<td id ="id_treatment_outcome_date_value"><obs conceptId="159787AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="treatmentoutcomedate"/></td>
-
-				</tr>
-			</table>
-			<table  class="baseline-aligned" width="auto" border="0" cellspacing="10">
+			<table class="tb" align="center">
 				<tr>
 					<td>
-					<div id="transferout">
-						<table>
+
+						<table  border="0" cellspacing="5" align="center">
 							<tr>
-								<td>Transferred out to:</td>
-								<td><obs conceptId="159495AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " id="transferredoutto"/></td>
+								<td>Treatment Outcome</td>
+								<td><obs conceptId="159786AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  style="dropdown" id="treatment_outcome"  answerConceptIds="159791AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160035AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160034AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160031AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Cured(Smear. Negative),Treatment Completed(no smear result),Failure(Smear. Positive),Dead,Defaulted,Transferred Out"/></td>
+
+								<td id ="id_treatment_outcome_date_ttle">Treatment Outcome date</td>
+								<td id ="id_treatment_outcome_date_value"><obs conceptId="159787AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="treatmentoutcomedate"/></td>
+
 							</tr>
 						</table>
-					</div>
-					</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>
-						<table>
-							<td valign="top"><b>Notes:</b></td>
-							<td><obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="5" cols="50" /></td>
+						<table  border="0" cellspacing="5"  align="center">
+							<tr>
+								<td>
+								<div id="transferout">
+									<table>
+										<tr>
+											<td>Transferred out to:</td>
+											<td><obs conceptId="159495AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " id="transferredoutto"/></td>
+										</tr>
+									</table>
+								</div>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<table>
+										<td valign="top"><b>Notes:</b></td>
+										<td><obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="5" cols="50" id="notes"/></td>
+									</table>
+
+								</td>
+								<td>
+
+								</td>
+							</tr>
 						</table>
-
-					</td>
-					<td>
-
 					</td>
 				</tr>
 			</table>
