Made the following changes: = Updated HFE from 2.2 to 2.2.1 to handle the identifier issue = Adjusted the before submit method to request for the HEI Id when a child is exposed to HIV = Adjusted Antibody test calculation to only check at children who are HIV exposed

--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -154,7 +154,7 @@
 					jq('#child-status-required').html('Please specify the condition of the child');
 					return false;
 				}
-				if (getValue('hiv-exposed-child.value') == EXPOSURE_TO_HIV_ID &amp;&amp; getValue('hei-id.value') == "") {
+				if (getValue('hiv-exposed-child.value') == EXPOSURE_TO_HIV_ID &amp;&amp; jq('#hei-id :input').val() == "") {
 					jq('#child-status-required').show();
 					jq('#child-status-required').html('HEI Unique Number Required');
 					return false;
