Removed unnecessary field from mchmsAntenatalVisit.html

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
@@ -151,7 +151,7 @@
 <tr>
 	<td>
 		<legend>Vitals</legend>
-		<table align="center" width="100%" class="tb1">
+		<table align="top" width="100%" class="tb1">
 			<tr>
 				<td>
 					<table>
@@ -254,56 +254,82 @@
 		</table>
 	</td>
 	<td valign="top">
-		<legend>Other Observations</legend>
-		<table align="center" width="100%" class="tb1">
+		<table>
 			<tr>
-				<td>H.b.:</td>
 				<td>
-					<obs conceptId="21AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+					<legend>Other Observations</legend>
+					<table align="center" width="100%" class="tb1">
+						<tr>
+							<td>H.b.:</td>
+							<td>
+								<obs conceptId="21AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Pallor:</td>
+							<td>
+								<obs conceptId="5245AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Maturity:</td>
+							<td>
+								<obs conceptId="1438AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Fundal Height (Weeks):</td>
+							<td>
+								<obs conceptId="1439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="fundal"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Presentation:</td>
+							<td>
+								<obs conceptId="160090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="139814AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160091AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Lie:</td>
+							<td>
+								<obs conceptId="162089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Foetal Heart Rate:</td>
+							<td>
+								<obs conceptId="1440AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Foetal Movement:</td>
+							<td>
+								<obs conceptId="162107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+					</table>
 				</td>
 			</tr>
 			<tr>
-				<td>Pallor:</td>
 				<td>
-					<obs conceptId="5245AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-						 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-				</td>
-			</tr>
-			<tr>
-				<td>Maturity:</td>
-				<td>
-					<obs conceptId="1438AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-				</td>
-			</tr>
-			<tr>
-				<td>Fundal Height (Weeks):</td>
-				<td>
-					<obs conceptId="1439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="fundal"/>
-				</td>
-			</tr>
-			<tr>
-				<td>Presentation:</td>
-				<td>
-					<obs conceptId="160090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-						 answerConceptIds="139814AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160091AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-				</td>
-			</tr>
-			<tr>
-				<td>Lie:</td>
-				<td>
-					<obs conceptId="162089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-				</td>
-			</tr>
-			<tr>
-				<td>Foetal Heart Rate:</td>
-				<td>
-					<obs conceptId="1440AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-				</td>
-			</tr>
-			<tr>
-				<td>Foetal Movement:</td>
-				<td>
-					<obs conceptId="162107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+					<legend>Eligibility Assessment</legend>
+					<table align="center" width="100%" class="tb1">
+						<tr>
+							<td>WHO Staging:</td>
+							<td>
+								<obs conceptId="21AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>CD4:</td>
+							<td>
+								<obs conceptId="5245AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+					</table>
 				</td>
 			</tr>
 		</table>
