Changed title of some dialogs from 'KenyaEMR' to more meaningful things like 'Logout'

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -45,7 +45,7 @@
 
 		function onUpnGenerateClick() {
 			kenyaui.openConfirmDialog({
-				heading: 'KenyaEMR',
+				heading: 'Generate UPN',
 				message: 'This should only be used for new patients. If the patient already has a UPN, please enter that instead.',
 				okLabel: 'Continue',
 				okCallback: function() {
