Added partner test date field to the mchmsEnrollment form.

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -280,6 +280,12 @@
 						 answerLabels="HIV Positive,HIV Negative,Unknown"/>
 				</td>
 			</tr>
+			<tr>
+				<td width="250">Partner HIV Test Date:</td>
+				<td>
+					<obs conceptId="160082AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+				</td>
+			</tr>
 		</table>
 	</td>
 </tr>
