Added WHO staging and CD4 fields in the MCHMS antenatal visit form

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
@@ -314,21 +314,18 @@
 			</tr>
 			<tr>
 				<td>
-					<legend>Eligibility Assessment</legend>
+					<legend>ART Eligibility Assessment (If applicable)</legend>
 					<table align="center" width="100%" class="tb1">
-						<tr>
-							<td>WHO Staging:</td>
-							<td>
-								<obs conceptId="21AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-						</tr>
-						<tr>
-							<td>CD4:</td>
-							<td>
-								<obs conceptId="5245AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-						</tr>
+						<td>WHO Staging:</td>
+						<td>
+							<obs conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+								 answerConceptIds="1204AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1205AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1206AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1207AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+								 style="dropdown" answerLabels="WHO Stage1,WHO Stage2,WHO Stage3,WHO Stage4"/>
+						</td>
+						<td>CD4:</td>
+						<td>
+							<obs conceptId="5497AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" showUnits="true"/>
+						</td>
 					</table>
 				</td>
 			</tr>
